grammar.js
    source_file: $ => seq(
      optional($.shebang),
      optional($.file_header),
      optional($.arg_block),
      repeat($.cmd_block),
      repeat($._stmt),
    ),

    shebang: $ => /#!.*/,

    file_header: $ => seq(
      $._file_header_line,
      optional(field("contents", $.file_header_contents)),
      $._file_header_line,
    ),

    file_header_contents: $ => repeat1(seq(
      optional(/[^\r\n]+/),
      /\r?\n/
    )),

    _file_header_line: $ => seq("---", /\r?\n/),

    _stmt: $ => choice(
      $._simple_stmts,
      $._complex_stmt,
    ),

    // Simple stmts

    _simple_stmt: $ => choice(
      $.expr_stmt,
      $.assign,
      $.typed_assign,
      $.compound_assign,
      $.shell_stmt,
      $.incr_decr,
      $.del_stmt,
      $.break_stmt,
      $.continue_stmt,
      $.pass_stmt,
      $.return_stmt,
      $.yield_stmt,
    ),

    expr_stmt: $ => prec.right(seq(
      field("expr", $.expr),
      optional(field("catch", $.catch_block)),
    )),

    primary_expr: $ => choice(
      $.literal,
      $.list_comprehension,
      $.parenthesized_expr,
      $.call,
    ),

    call: $ => prec.right(PREC.call, seq(
      field("func", $._identifier),
      $._call_arg_list),
    ),

    _call_arg_list: $ => choice(
      seq("(", ")"), // empty call
      seq("(", sepTrail1(field("arg", $.expr)), ")"), // no named args
      seq("(", optional(seq(commaSep1(field("arg", $.expr)), ",")), sepTrail1(field("named_arg", $.call_named_arg)), ")"), // mixed // todo can probably collapse with previous
    ),

    call_named_arg: $ => seq(
      field('name', $._identifier),
      '=',
      field('value', $.expr),
    ),

    assign: $ => prec.right(seq(
      $._left_side,
      '=',
      $._right_side,
      optional(field("catch", $.catch_block)),
    )),

    // Typed local declaration: `x: int = 5`.
    //
    // typed_assign covers ALL identifiers that aren't rad-block
    // keywords. The rad/request/display cases are handled inside
    // the merged `rad_block` rule's choice (see Rad Block section
    // below) so `rad: int = 5` parses as a typed-assign branch of
    // rad_block while `rad :\n indent ...` parses as the block
    // branch - both share the same LR state, lookahead picks the
    // right one. No GLR forking or dynamic precedence needed.
    compound_assign: $ => seq(
      $._left_side_single,
      field('op', choice(
        '+=', '-=', '*=', '/=', '%=',
      )),
      field('right', $._right_side_single),
    ),

    _left_side_single: $ => prec(1, field("left", $.var_path)),

    _left_side: $ => choice(
      commaSep1(field("lefts", $.var_path)),
      seq('[', sepTrail1(field("lefts", $.var_path)), ']'),
      $._left_side_single,
    ),


    _right_side_single: $ => field("right", choice(
      $.expr,
      $.json_path,
    )),

    _right_side: $ => prec(-1, choice(
      commaSep1($._right_side_single),
      $._right_side_single,
      field("right", $.switch_stmt),
    )),

    // todo rename to identifier_path?
    var_path: $ => prec.left(PREC.var_path, seq(
      field("root", $._identifier),
      repeat($._indexing),
    )),

    // expected to look like var_path
    _indexing: $ => prec(PREC.indexing, choice(
      seq(
        '[',
        field('indexing', choice(
          $.expr,
          $.slice,
        )),
        ']'
      ),
      seq('.', field("indexing", choice($._identifier, $.call))),
    )),

    slice: $ => seq(
      optional(field("start", $.expr)),
      ':',
      optional(field("end", $.expr)),
    ),

    json_path: $ => seq(
      field("segment", $.json_opener),
      repeat(seq(
        '.',
        optional(field("segment", $.json_segment)),
      )),
    ),

    if_stmt: $ => seq(
      field("alt", $.if_alt),
      repeat(seq("else", field("alt", $.if_alt))),
      optional(seq("else", field("alt", $.else_alt))),
    ),

    _if_clause: $ => seq("if", field('condition', $.expr)),

    _for_in: $ => seq(
      'for',
      field("lefts", $.for_lefts),
      'in',
      field('right', $.expr),
      optional(seq('with', field('context', $._identifier))),
    ),

    list_comprehension: $ => seq(
      '[',
      field('expr', $.expr),
      $._for_in,
      optional($._if_clause),
      ']',
    ),

    shell_cmd: $ => seq(
      repeat(field("modifier", choice("quiet", "confirm"))),
      '$',
      field("command", $.expr),
    ),

    // Arg Block

    arg_block: $ => seq(
      "args",
      colonBlock($, $._arg_stmt)
    ),

    _arg_stmt: $ => choice(
      field("declaration", $.arg_declaration),
      $._arg_constraint,
    ),

    arg_declaration: $ => choice(
      $._variadic_arg_declaration,
      $._non_variadic_arg_declaration,
    ),

    _variadic_arg_declaration: $ => seq(
      field("variadic_marker", "*"),
      field("arg_name", $._identifier),
      optional(field("rename", $.string)),
      optional(field("shorthand", $.shorthand_flag)),
      $._variadic_type_andor_default,
      optional($._arg_comment),
    ),

    _non_variadic_arg_declaration: $ => seq(
      field("arg_name", $._identifier),
      optional(field("rename", $.string)),
      optional(field("shorthand", $.shorthand_flag)),
      $._type_andor_default,
      optional($._arg_comment),
    ),

    comment_text: $ => /.*/,

    shorthand_flag: $ => /[a-zA-Z]/,

    arg_enum_constraint: $ => seq(
      field("arg_name", $._identifier),
      "enum",
      field("values", $.string_list),
    ),

    arg_regex_constraint: $ => seq(
      field("arg_name", $._identifier),
      "regex",
      field("regex", $.string),
    ),

    rad_block: $ => prec.dynamic(1, seq(
      field('rad_type', $.rad_keyword),
      optional(field("source", $.expr)),
      colonBlockField($, $._rad_stmt, "stmt", $._block_colon),
    )),

    rad_keyword: $ => choice("rad", "request", "display"),

    _rad_stmt: $ => choice(
      $._rad_simple_stmts,
      $.rad_field_modifier_stmt,
      $.rad_if_stmt,
    ),

    rad_sort_stmt: $ => prec.right(seq(
      "sort",
      commaSep0(field("specifier", $.rad_sort_specifier)),
    )),

    rad_field_stmt: $ => seq(
      "fields",
      commaSep1(field("identifier", $._identifier)),
    ),

    rad_field_modifier_stmt: $ => seq(
      commaSep1(field("identifier", $._identifier)),
      colonBlockField($, $._rad_field_modifier, "mod_stmt"),
    ),

    _rad_field_modifier: $ => choice(
      $.rad_field_mod_color,
      $.rad_field_mod_map,
      $.rad_field_mod_filter,
    ),

    rad_field_mod_color: $ => seq(
      "color",
      field("color", $.expr), // todo too freeing?
      field("regex", $.expr),
    ),

    rad_field_mod_map: $ => seq(
      "map",
      field("lambda", choice($.fn_lambda, $._identifier)),
    ),

    rad_if_stmt: $ => seq(
      field("alt", $.rad_if_alt),
      repeat(seq("else", field("alt", $.rad_if_alt))),
      optional(seq("else", field("alt", $.rad_else_alt))),
    ),

    defer_block: $ => seq(
      field("keyword", choice("defer", "errdefer")),
      choice(
        colonBlockField($, $._stmt, "stmt"),
        field("stmt", $._simple_stmt),
      ),
    ),

    // Functions & Lambdas

    comment: _ => token(seq('//', /.*/)),

    string_type: $ => "str",
    int_type: $ => "int",
    bool_type: $ => "bool",
    string_list_type: $ => "str[]",
    int_list_type: $ => "int[]",
    string_list: $ => seq(
      "[",
      sepTrail0(field("list_entry", $.string)),
      "]",
    ),
    // intended for arg block
    int_list: $ => seq(
      "[",
      sepTrail0(field("list_entry", $.int_arg)),
      "]",
    ),
    // intended for arg block
    list: $ => choice(
      $.empty_list,
      seq("[", sepTrail0(field("list_entry", $.expr)), "]",),
    ),

    map: $ => seq("{", sepTrail0(field("map_entry", $.map_entry)), "}"),
    map_entry: $ => seq(
      field('key', $.expr),
      ":",
      field('value', $.expr),
    ),

    string: $ => seq(
      field("start", $.string_start),
      optional(field("contents", $.string_contents)),
      field("end", $.string_end),
    ),

    string_contents: $ => prec.right(repeat1(
      choice(
        $._escape_seq,
        field("backslash", $._not_escape_seq),
        field("content", $.string_content),
        field("interpolation", $.interpolation),
      ))),

    _escape_seq: $ => prec(1, choice(
      field("single_quote", $.esc_single_quote),
      field("double_quote", $.esc_double_quote),
      field("backtick", $.esc_backtick),
      field("newline", $.esc_newline),
      field("tab", $.esc_tab),
      field("backslash", $.esc_backslash),
      field("open_bracket", $.esc_open_bracket),
      field("close_bracket", $.esc_close_bracket),
    )),

    _not_escape_seq: _ => token.immediate('\\'),

    interpolation: $ => seq(
      '{',
      field('expr', $.expr),
      optional(field('format', $.format_specifier)),
      '}',
    ),
    _identifier: $ => prec(1, choice( // prec to avoid conflict with aliases
      // if identifier is missing, *identifierRegex* will be the node marked as missing.
      // by aliasing it here, we prevent downstream from needing to worry about identifierRegex,
      // but still let them see when the identifier is missing.
      alias($.identifierRegex, "identifier"),
      // need the following aliases, otherwise tree sitter eagerly parses them out
      // as keywords, causing ERROR nodes in the tree
      alias("confirm", "identifier"),
      alias("unsafe", "identifier"),
      alias("quiet", "identifier"),
      // rad block keyword - allow use as identifier when not starting a block
      // (e.g., `rad = foo` should work as an assignment)
      alias("rad", "identifier"),
      alias("request", "identifier"),
      alias("display", "identifier"),
      // for-loop context keyword - allow use as identifier outside for-loop context
      alias("with", "identifier"),
    )),

    int: _ => /\d(_*\d+)*/,
    float: _ => /\d(_*\d+)*\.\d(_*\d+)*/,
    bool: _ => choice("true", "false"),
    literal: $ => choice(
      $.string,
      $.float,
      $.int,
      $.scientific_number,
      $.bool,
      $.list,
      $.map,
      $.null,
    ),
  },
});

module.exports.PREC = PREC;

/**
 * Creates a rule to match zero or more of the rules separated by a comma
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {ChoiceRule}
 */
function commaSep0(rule) {
  return sep0(rule, ',');
}

/**
 * Creates a rule to match zero or more occurrences of `rule` separated by `sep`, no trail.
 *
 * @param {RuleOrLiteral} rule
 *
 * @param {RuleOrLiteral} separator
 *
 * @returns {ChoiceRule}
 */
function sep0(rule, separator) {
  return optional(sep1(rule, separator));
}

/**
 * Creates a rule to match one or more of the rules separated by a comma
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function commaSep1(rule) {
  return sep1(rule, ',');
}

/**
 * Creates a rule to match one or more occurrences of `rule` separated by `sep`, no trail.
 *
 * @param {RuleOrLiteral} rule
 *
 * @param {RuleOrLiteral} separator
 *
 * @returns {SeqRule}
 */
function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}

/**
 * Creates a rule to match zero or more occurrences of a rule, allowing for trailing commas.
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {ChoiceRule}
 */
function sepTrail0(rule) {
  return optional(sepTrail1(rule));
}

/**
 * Creates a rule to match one or more occurrences of a rule, allowing for trailing commas.
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function sepTrail1(rule) {
  return seq(rule, repeat(seq(',', rule)), optional(','));
}

/**
 * Creates a rule to match repeated occurrences of a rule as a body, starting with a colon,
 * handling indents.
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function colonBlock($, rule) {
  return seq(
    ":",
    $._newline,
    $._indent,
    repeat(rule),
    $._dedent
  );
}

/**
 * Creates a rule to match repeated occurrences of a rule as a body, starting with a colon,
 * handling indents.
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function colonBlockField($, rule, fieldName, colonToken) {
  // Most callers want the in-grammar ':' literal. rad_block passes
  // the external _block_colon token so its colon is distinguishable
  // from a typed-assign ':' (which can also follow a var_path-like
  // prefix when the variable name happens to be 'rad', 'request',
  // or 'display'). Defaulting keeps every other call site
  // unchanged.
  return seq(
    colonToken || ":",
    $._newline,
    $._indent,
    field(fieldName, repeat(rule)),
    $._dedent
  );
}
